# vapoursynth-degrainmedian

./: Makefile.am  configure.ac
src/: degrainmedian.cpp
